[gd_scene load_steps=2 format=3 uid="uid://bh4pmkwqh73yw"]

[ext_resource type="Script" path="res://addons/reaction/views/bottom_panel_view.gd" id="1_flcq3"]

[node name="BottomPanelView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flcq3")

[node name="Columns" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="EventLogItemList" type="ItemList" parent="Columns"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="EventLogDataContainer" type="MarginContainer" parent="Columns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="Columns/EventLogDataContainer"]
layout_mode = 2

[node name="General" type="MarginContainer" parent="Columns/EventLogDataContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Columns/EventLogDataContainer/TabContainer/General"]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EventLabel" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows"]
layout_mode = 2
text = "Event:"

[node name="EventDataContainer" type="HBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/EventDataContainer"]
layout_mode = 2
text = "Label:"

[node name="EventLabelLineEdit" type="LineEdit" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/EventDataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="EventUidLabel" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/EventDataContainer"]
layout_mode = 2
text = "Uid:"

[node name="EventUidLineEdit" type="LineEdit" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/EventDataContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="RuleLabel" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows"]
layout_mode = 2
text = "Rule:"

[node name="RuleDataContainers" type="HBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/RuleDataContainers"]
layout_mode = 2
text = "Label:"

[node name="RuleLabelLineEdit" type="LineEdit" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/RuleDataContainers"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="RuleUidLabel" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/RuleDataContainers"]
layout_mode = 2
text = "Uid:"

[node name="RuleUidLineEdit" type="LineEdit" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/RuleDataContainers"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="CriteriaModificationColumns" type="HBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="CriteriaRow" type="VBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/CriteriaRow"]
layout_mode = 2
text = "Criterias:"

[node name="PanelContainer" type="PanelContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/CriteriaRow"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="CriteriasDataLabel" type="RichTextLabel" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/CriteriaRow/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="ModificationRow" type="VBoxContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/ModificationRow"]
layout_mode = 2
text = "Modifications:"

[node name="PanelContainer" type="PanelContainer" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/ModificationRow"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="ModificationsDataLabel" type="RichTextLabel" parent="Columns/EventLogDataContainer/TabContainer/General/ScrollContainer/Rows/CriteriaModificationColumns/ModificationRow/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true

[node name="Blackboard" type="MarginContainer" parent="Columns/EventLogDataContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Columns/EventLogDataContainer/TabContainer/Blackboard"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Columns/EventLogDataContainer/TabContainer/Blackboard/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BlackboardDataLabel" type="RichTextLabel" parent="Columns/EventLogDataContainer/TabContainer/Blackboard/ScrollContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
